<resources>
    <string name="app_name">Let\'s Yeat</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Log In</string>
    <string name="register_btn">Register</string>
    <string name="google_login_btn">Log in with Google</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="placeholder_recipe_name">Pasta Bolognese</string>
    <string name="placeholder_recipe_time">1:50</string>
    <string name="placeholder_recipe_difficulty">3</string>
    <string name="calendar">Calendar</string>
    <string name="groceries">Groceries</string>
    <string name="yeat">YEAT!</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_recipes">Search recipes</string>
    <string name="tags">Tags</string>

    <string name="cook_notification_title_template">Time to cook %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="cook_notification_placeholder_text_template">Its just about time to cook %1$s.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="notification_title">Let\'s Yeat: Ready to cook!</string>
    <string name="default_notification_channel_id">notification channel</string>
    <string name="lets_get_you_started">Let\'s get you started:</string>
    <string name="select_your_favourite_tags">Select your favourite tags:</string>
    <string name="next">Next</string>
    <string name="at_what_time_do_you_eat">At what time do you eat?</string>
    <string name="change">Change</string>
    <string name="choose_your_recipe_difficulty">Choose your recipe difficulty:</string>
    <string name="select_time">Select Time:</string>
    <string name="default_time">19:30</string>
    <string name="finish">Finish</string>
    <string name="incorrect_difficulty">Difficulty must be between 0 and 5</string>
    <string name="cook">Cook</string>
    <string name="google_login_failed">Google Login Failed</string>
    <string name="registration_failed">Registration failed</string>
    <string name="cannot_load_recipe">Cannot load recipe</string>

    <string name="select_default_time">Default Time</string>
    <string name="select_custom_time">Custom Time</string>
    <string name="when_cook_meal">When would you like to cook your meal?</string>
    <string name="cook_confirmed">Cook confirmed</string>
    <string name="could_not_confirm_cook">Could not confirm cook</string>

    <string-array name="select_times">
        <item>@string/select_custom_time</item>
        <item>@string/select_default_time</item>
    </string-array>
</resources>
