<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationValuesFragment"
    android:orientation="vertical"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"

        android:text="@string/at_what_time_do_you_eat"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registration_time_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:text="@string/default_time"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/registration_change_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/change"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"

        android:text="@string/choose_your_recipe_difficulty"
        android:textSize="24sp" />

    <NumberPicker
        android:id="@+id/registration_difficulty_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>