<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="10dp"

    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipe_card_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"

            android:scaleType="centerCrop"
            android:contentDescription="@string/placeholder_recipe_name"
            tools:src="@drawable/placeholder_recipe_photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="16dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/recipe_card_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:contentDescription="@string/placeholder_recipe_name"
                android:text="@string/placeholder_recipe_name"
                android:scrollHorizontally="false"
                android:maxLines="4"

                android:textColor="@color/textColorRecipeListItem"
                android:textSize="22sp"/>


            <TextView
                android:id="@+id/recipe_card_time"
                style="@style/RecipeListItemValues"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_timer_black_20dp"

                android:drawablePadding="5dp"


                android:text="@string/placeholder_recipe_time"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_card_name" />


            <TextView
                android:id="@+id/recipe_card_difficulty"
                style="@style/RecipeListItemValues"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:drawableEnd="@drawable/ic_star_border_black_20dp"
                android:drawableRight="@drawable/ic_star_border_black_20dp"
                android:drawablePadding="2dp"

                android:text="@string/placeholder_recipe_difficulty"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_card_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
