<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".browse.RecipeCard">

        <ImageView
            android:id="@+id/recipe_card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            tools:src="@drawable/placholder_recipe_photo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recipe_card_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:contentDescription="@string/placeholder_recipe_name"
                android:text="@string/placeholder_recipe_name"
                android:scrollHorizontally="false"
                android:maxLines="2"

                android:textColor="@color/textColorRecipeListItem"
                android:textSize="30sp"/>



            <TextView
                android:id="@+id/recipe_card_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/ic_timer_black_20dp"
                android:drawableStart="@drawable/ic_timer_black_20dp"
                android:drawablePadding="5dp"

                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"

                style="@style/RecipeListItemValues"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/placeholder_recipe_time"/>


            <TextView
                android:id="@+id/recipe_card_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:drawableRight="@drawable/ic_star_border_black_20dp"
                android:drawableEnd="@drawable/ic_star_border_black_20dp"
                android:drawablePadding="2dp"

                android:text="@string/placeholder_recipe_difficulty"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"

                style="@style/RecipeListItemValues"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
